<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">

        <ImageView
            android:id="@+id/cvBackground"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="-40dp"
            android:layout_marginTop="-80dp"
            android:contentDescription="@string/background"
            android:rotation="340"
            android:src="@drawable/common_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30ssp"
            android:layout_height="@dimen/_30ssp"
            android:layout_marginStart="@dimen/_6ssp"
            android:layout_marginTop="@dimen/_8ssp"
            android:contentDescription="@string/back"
            android:padding="@dimen/_6ssp"
            android:src="@drawable/ic_back_icon"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:paddingHorizontal="@dimen/_20ssp"
            android:paddingTop="@dimen/_36ssp"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_26ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:paddingHorizontal="@dimen/_24ssp"
            android:text="@string/lorem_ipsum_is_simply_dummy_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_26ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/light_gray"
            android:hint="@string/email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:nextFocusDown="@id/etPassword"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40ssp"
            android:layout_marginHorizontal="@dimen/_60ssp"
            android:layout_marginBottom="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_60ssp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins_bold"
            android:letterSpacing="0.18"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="
            @id/tlEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/_60ssp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_50ssp"
                android:layout_height="@dimen/_50ssp"
                android:indeterminateTint="@color/primaryColor"
                android:scaleType="centerInside"
                android:visibility="gone" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/progressBarHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:animateLayoutChanges="true"
            android:background="#A6EFEFEF"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>